static/css/style.css
/* all pages */

img {
    align-content: center;
    width: 400px;
    max-width: 100%;
    height: 220px;
    max-height: inherit;
}

.btn {
    background-color: #0875c3;
    width: 272px;
    margin-top: 5px;
    margin-bottom: 5px;
}

.add-cancel-button {
    width: 272px;
}

.cancel-button {
    background-color: red;
}

.cancel-button a {
    color: white;
}

/* base.html */

.navbar-fixed {
    height: 200px;
}

nav .nav-wrapper {
    background-color: #393a4c;
}

nav .brand-logo {
    left: 20%;
}

.empty-container {
    height: 100px;
}

body {
    font-family: Helvetica;
    margin: 0;
    padding: 0;
    padding-bottom: 150px;
    min-height: 100%;
}

#page-container {
  position: relative;
  min-height: 100vh;
}

#content-wrap {
  padding-bottom: 180px;
}

.page-footer {
   position: fixed;
   bottom: 0;
   width: 100%;
   height: 140px;
   padding-top: 0;
   background-color: #393a4c;
   z-index: 2;
}

/* index.html */

.homepage-container {
    position: relative;
    text-align: center;
    padding: 20px;
}

.homepage-images {
    margin-top: 5%;
}

.caption {
    color: #393a4c;
    position: relative;
    top: 40%;
    left: 50%;
    transform: translate(-50%);
}

/* exercises.html */

.btn-add {
    background-color: #393a4c;
    width: 272px;
}

.filter-button {
    width: 140px;

}

.exercises-container {
    border: 1px #393a4c ridge;
    margin-right: 5px;
    margin-bottom: 5px;
}

/* viewexercise.html */

.image-view {
    width: 600px;
    height: auto;
    max-width: 90%;
    margin-bottom: 20px;
}

/* statistics */

.statistics-title {
    text-align: center;
}

.statistics {
    text-align: center;
}


/* About */

.about-image {
    width: 350px;
    max-width: 100%;
    height: 200px;
    max-height: auto;
}

.sponsors a {
    color: #393a4c;
    text-decoration: underline;
}

.sponsors a:hover {
    color: #0875c3;
    text-decoration: none;
}

